# vk_daq

./: Makefile.am  autogen.sh
.github/workflows/: main.yml
examples/: Makefile.am  vkinging.ini  zadig.c  zadig.h  zadig.rc  zadig_license.h  zadig_resource.h
libwdi/: libusb0.inf.in  libusbk.inf.in  libwdi.c  libwdi.h  pki.c
